--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/www/lib
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
 node_modules/
 platforms/
 plugins/
+/temp
+/bower_components
 .idea/
