--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "HelloIonic",
   "private": "true",
-  "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.4"
-  },
   "dependencies": {
+    "ionic": "^1.3.0",
     "angular-translate": "^2.11.0"
   }
 }
