--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "servicetoday",
   "version": "1.1.1",
   "description": "ServiceToday: An Ionic project",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-inject": "^4.0.0",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^2.2.20",
+    "main-bower-files": "^2.13.0",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
