--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^2.2.20",
     "main-bower-files": "^2.13.0",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
